migrate a bunch more code

--- a/web/template/nav.templ
+++ b/web/template/nav.templ
@@ -116,8 +116,8 @@ templ nav() {
             <span class="logged-in-user"/>
           </a>
           <ul class="dropdown-menu">
-            <li class="if-admin hidden"><a class="dropdown-item">Admin</a></li>
-            <li><a class="dropdown-item">Log out</a></li>
+            <li class="if-admin hidden"><a href="/ims/app/admin" class="dropdown-item">Admin</a></li>
+            <li><a href="/ims/auth/logout" class="dropdown-item">Log out</a></li>
           </ul>
         </li>
       </ul>
