--- a/web/template/head.templ
+++ b/web/template/head.templ
@@ -5,16 +5,16 @@ templ head(title string, module string, imports []string) {
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link type="image/png" rel="icon" href="/ims/static/logo.png" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="https://cdn.datatables.net/2.2.2/css/dataTables.bootstrap5.min.css" rel="stylesheet" integrity="sha384-BDXgFqzL/EpYeT/J5XTrxR+qDB4ft42notjpwhZDEjDIzutqmXeImvKS3YPH/WJX" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="/ims/static/style.css">
+    <link rel="stylesheet" href="/ims/static/ext/bootstrap.min.css">
+    <link rel="stylesheet" href="/ims/static/ext/dataTables.bootstrap5.min.css">
+    <link rel="stylesheet" href="/ims/static/style.css" type="text/css">
     <title>{title}</title>
-    <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="/ims/static/ext/jquery-3.1.0.min.js"></script>
+    <script src="/ims/static/ext/bootstrap.bundle.min.js"></script>
     <script src="/ims/static/urls.js"></script>
     <script src="/ims/static/theme.js"></script>
-    <script src="https://cdn.datatables.net/2.2.2/js/dataTables.min.js" integrity="sha384-AenwROccLjIcbIsJuEZmrLlBzwrhvO94q+wm9RwETq4Kkqv9npFR2qbpdMhsehX3" crossorigin="anonymous"></script>
-    <script src="https://cdn.datatables.net/2.2.2/js/dataTables.bootstrap5.min.js" integrity="sha384-G85lmdZCo2WkHaZ8U1ZceHekzKcg37sFrs4St2+u/r2UtfvSDQmQrkMsEx4Cgv/W" crossorigin="anonymous"></script>
+    <script src="/ims/static/ext/dataTables.min.js"></script>
+    <script src="/ims/static/ext/dataTables.bootstrap5.min.js"></script>
     for _, imp := range imports {
         <script src={"/ims/static/" + imp}></script>
     }
