--- a/web/template/fieldreports.templ
+++ b/web/template/fieldreports.templ
@@ -49,7 +49,7 @@ templ FieldReports(deployment string) {
     <div class="row">
       <div id="button_container" class="col-sm-7">
         <div class="btn-group new_field_report no-print">
-          <a href="./new" target="_blank">
+          <a href="./field_reports/new" target="_blank">
             <button
                     id="new_field_report"
                     type="button"
