get event source working (needed to fix a timeout), improve its api

--- a/web/template/fieldreports.templ
+++ b/web/template/fieldreports.templ
@@ -41,7 +41,7 @@ templ FieldReports(deployment string) {
     </div>
 
     <p class="d-sm-none no-print">
-      <a href="../incidents/">
+      <a href="./incidents/">
         → Incidents
       </a>
     </p>
