--- a/web/template/incidents.templ
+++ b/web/template/incidents.templ
@@ -42,7 +42,7 @@ templ Incidents(deployment string) {
     </div>
 
     <p class="d-sm-none no-print">
-      <a href="../field_reports/">
+      <a href="./field_reports/">
         → Field Reports
       </a>
     </p>
@@ -50,7 +50,7 @@ templ Incidents(deployment string) {
     <div class="row">
       <div class="col-sm-7">
         <div class="btn-group new_incident no-print">
-          <a href="./new" target="_blank">
+          <a href="./incidents/new" target="_blank">
             <button
                     id="new_incident"
                     type="button"
